--- a/src/pages/escolha/escolha.html
+++ b/src/pages/escolha/escolha.html
@@ -9,6 +9,12 @@
 
 <ion-content padding>
 
+  <ion-slides pager="true">
+    <ion-slide *ngFor="let foto of carro.fotos">
+      <img src="{{foto}}">
+    </ion-slide>
+  </ion-slides>
+
   <ion-item-group>
     <ion-item-divider color="light">
       VEÍCULO
@@ -19,6 +25,7 @@
 
   <ion-item-group>
     <ion-item-divider color="light">
+      <ion-icon name="options" ></ion-icon>
       ACESSÓRIOS
     </ion-item-divider>
     <ion-item>Acessório 1</ion-item>
@@ -29,6 +36,11 @@
   <ion-item-divider color="light">
     <span item-right>TOTAL: R$1000,00</span>
   </ion-item-divider>
-  <button ion-button block>AVANÇAR</button>
+
+  <ion-fab top right edge>
+    <button ion-fab>
+      <ion-icon name="arrow-dropright"></ion-icon>
+    </button>
+  </ion-fab>
 
 </ion-content>
