--- a/src/pages/escolha/escolha.html
+++ b/src/pages/escolha/escolha.html
@@ -25,16 +25,22 @@
 
   <ion-item-group>
     <ion-item-divider color="light">
-      <ion-icon name="options" ></ion-icon>
+      <ion-icon name="options"></ion-icon>
       ACESSÓRIOS
     </ion-item-divider>
-    <ion-item>Acessório 1</ion-item>
-    <ion-item>Acessório 2</ion-item>
+    <ion-item *ngFor="let acessorio of acessorios">
+      <ion-label>
+        <h2>{{acessorio.nome}} </h2>
+        <h4>{{acessorio.preco}}</h4>
+      </ion-label>
+
+      <ion-toggle (ionChange)="atualizarPrecoTotal(toggle.checked,acessorio)" #toggle color="secondary"></ion-toggle>
+    </ion-item>
 
   </ion-item-group>
 
   <ion-item-divider color="light">
-    <span item-right>TOTAL: R$1000,00</span>
+    <span item-right>TOTAL: {{precoTotal | currency}}</span>
   </ion-item-divider>
 
   <ion-fab top right edge>
