final do curso parte 1

--- a/src/pages/cadastro/cadastro.html
+++ b/src/pages/cadastro/cadastro.html
@@ -19,7 +19,7 @@
   <p>{{precoTotal | currency }}</p>
 
   <form (ngSubmit)="agenda()"  #formulario="ngForm">
-    
+
     <ion-item>
       <ion-label stacked>Nome</ion-label>
       <ion-input [(ngModel)]="nome" name="nome"></ion-input>
@@ -37,7 +37,7 @@
 
     <ion-item>
       <ion-label stacked>Data</ion-label>
-      <ion-datetime [(ngModel)]="data" name="data" dateFormat="DD/MM/YY"></ion-datetime>
+      <ion-datetime [(ngModel)]="data" name="data" displayFormat="DD/MM/YY"></ion-datetime>
     </ion-item>
   </form>
 
